welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code

override def run() {
var diag=0;
var x=0

for (i<-0 to (diag+1)){
	setPos(j+1,i-1)
	ecritMessage(x)
	x=x+1
}
 diag=diag+1

}

